# hamlinlab

./: README.md  pyproject.toml
data/zenodo/: README.md  foo.csv
hamlinlab/: __init__.py  mplstyle.py
hamlinlab/matplotlib_styles/: prb_tall.mplstyle  prb_wide.mplstyle
hamlinlab/mplstyle/: mplstyle.py
hamlinlab/mplstyle/matplotlib_styles/: prb_defaults.mplstyle  prb_regular.mplstyle  prb_verywide.mplstyle
notebooks/: 01_quick_start.ipynb  02_zenodo.ipynb
