[tool.poetry]
name = "hamlinlab"
version = "0.1.1"
description = "Tools for common data analysis tasks in the Hamlin Lab"
authors = ["jhamlin-ufl <jhamlin@ufl.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.10.1"
ipympl = "^0.9.3"
sigfig = "^1.3.2"
matplotlib = "^3.7.0"
lmfit = "^1.1.0"
jupyterlab = "^3.6.3"
requests = "^2.28.2"
jupyterlab-vim = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
